<resources>
    <string name="app_name">MDA</string>
    <string name="content_description">Button to pause readings</string>
    <string name="activityTransitionsDisabled">MDA is no longer tracking your activity</string>
    <string name="errorDisablingActivityTransitions">There was an error disabling activity transitions, please try again.</string>
    <string name="errorEnablingActivityTransitions">There was an error enabling activity transition, please try again.</string>
    <string name="activityTransitionsEnabled">Activity Transitions now enabled</string>
    <string name="set_up_personal_information">Set up Personal Information</string>
    <string name="set_up_a_trusted_contact_information">Set Up a Trusted Contact Information</string>
    <string name="save_user_information">Save User Information</string>
    <string name="please_note_that_you_cannot_change_your_information_here_you_have_to_delete_it_in_the_settings_page">Please note that you cannot change your information here! You have to delete it in the settings page.</string>
    <string name="john_doe">Your name: John Doe</string>
    <string name="_87">Your age: 87</string>
    <string-array name="actions_to_record">
        <!--Remaining, we could do 'jumping' though.-->
        <item>Running</item>
        <!--Done-->
        <item>Falling</item>
        <item>Resting</item>
        <item>Walking</item>
        <item>Ascending the Stairs</item>
        <item>Descending the Stairs</item>
        <!--Done-->
    </string-array>

    <string name="shared_pref_file_name">com.theseuntaylor.mda.SHARED_PREF_FILE</string>
    <string name="user_name_key">com.theseuntaylor.mda.user_name</string>
    <string name="age_key">com.theseuntaylor.mda.age</string>
    <string name="trusted_contact_name_key">com.theseuntaylor.mda.trusted_contact_name</string>
    <string name="trusted_contact_number_key">com.theseuntaylor.mda.trusted_contact_number</string>
    <string name="has_data_key">com.theseuntaylor.mda.has_data</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="phone_number">+441234567891</string>
    <string name="save_trusted_contact">Save Trusted Contact</string>
    <string name="please_note_that_you_cannot_change_the_information_of_your_trusted_contact_here_you_have_to_delete_it_in_the_settings_page">Please note that you cannot change the information of your trusted contact here! You have to delete it in the settings page.</string>
    <string name="delete_information">Delete Information</string>
    <string name="are_you_sure">"Are you sure you want to delete your information and that of your trusted contact? "</string>
    <string name="activity_update_remove_success">Removal of Service Successful</string>
    <string name="activity_update_remove_failed">Removal of Service failed!</string>
    <string name="dummy_activity">Walking (14:16:34)</string>
    <string name="involved_in_fall">Detected Fall</string>
    <string name="been_in_a_fall">Have you been in a fall?</string>

</resources>